k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: musicbox-ingress
  namespace: musicbox
spec:
  rules:
    - host: musicbox.tino.sh
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: musicbox-service
                port:
                  number: 7777
  tls:
    - hosts:
        - musicbox.tino.sh
      secretName: musicbox-tino-sh-tls
